feat and refactor: adding pagination in products, wishlist and users. Refactor WishList table removing ID transformation in union table, equal genarated docs and test call routes and your returns, this is fine.
